--- a/CrayCray/AndroidManifest.xml
+++ b/CrayCray/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="se.chalmers.dat255.craycray.MainActivity"
+            android:name="se.chalmers.dat255.craycray.activity.MainActivity"
             android:label="@string/app_name"
             android:screenOrientation="portrait" >
             <intent-filter>
@@ -26,6 +26,10 @@
         <activity
             android:name="se.chalmers.dat255.craycray.GameOverDialog"
             android:label="@string/title_activity_game_over_dialog" >
+        </activity>
+        <activity
+            android:name="se.chalmers.dat255.craycray.RussianActivity"
+            android:label="@string/title_activity_russian" >
         </activity>
     </application>
 
