--- a/CrayCray/AndroidManifest.xml
+++ b/CrayCray/AndroidManifest.xml
@@ -28,7 +28,7 @@
             android:label="@string/title_activity_game_over_dialog" >
         </activity>
         <activity
-            android:name="se.chalmers.dat255.craycray.RussianActivity"
+            android:name="se.chalmers.dat255.craycray.activity.RussianActivity"
             android:label="@string/title_activity_russian" >
         </activity>
     </application>
