--- a/CrayCray/AndroidManifest.xml
+++ b/CrayCray/AndroidManifest.xml
@@ -27,6 +27,10 @@
             android:name="se.chalmers.dat255.craycray.GameOverDialog"
             android:label="@string/title_activity_game_over_dialog" >
         </activity>
+        <activity
+            android:name="se.chalmers.dat255.craycray.PopupActivity"
+            android:label="@string/title_activity_popup" >
+        </activity>
     </application>
 
 </manifest>
