--- a/CrayCray/AndroidManifest.xml
+++ b/CrayCray/AndroidManifest.xml
@@ -8,11 +8,18 @@
         android:minSdkVersion="16"
         android:targetSdkVersion="16" />
 
+    <instrumentation 
+        android:name="android.test.InstrumentationTestRunner"
+    	android:targetPackage="se.chalmers.dat255.craycray.test"
+    	android:label="CrayCray tests" />
+    
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
+        <uses-library 
+        android:name="android.test.runner" />
         <activity
             android:name="se.chalmers.dat255.craycray.MainActivity"
             android:label="@string/app_name"
