--- a/CrayCray/AndroidManifest.xml
+++ b/CrayCray/AndroidManifest.xml
@@ -14,8 +14,8 @@
     	android:label="CrayCray tests" />
     
     <application
+    	android:icon="@drawable/icon" 
         android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <uses-library 
