--- a/CrayCray/AndroidManifest.xml
+++ b/CrayCray/AndroidManifest.xml
@@ -44,12 +44,9 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="se.chalmers.dat255.craycray.GameOverDialog"
-            android:label="@string/title_activity_game_over_dialog" >
-        </activity>
-        <activity
             android:name="se.chalmers.dat255.craycray.activity.RussianActivity"
-            android:label="@string/title_activity_russian" >
+            android:label="@string/title_activity_russian" 
+            android:screenOrientation="portrait" >
         </activity>
     </application>
 
