craycray is now randomly playing music, but crashing when leaving the application with backbutton and trying to reenter. while inside the app the music initialization is not working when trying to start a new game, and when trying to start a new game inside the game without music is crashes...

--- a/CrayCray/AndroidManifest.xml
+++ b/CrayCray/AndroidManifest.xml
@@ -54,9 +54,11 @@
 
             </intent-filter>
         </activity>
+        <service android:name="se.chalmers.dat255.craycray.service.MusicService"
+        	android:enabled="true" >
+        </service>
 
     </application>
-
 
     <uses-permission android:name="android.permission.VIBRATE" >
     </uses-permission>
